alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_11_ends_with_colon_number.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid package release
 | 
 | 1-foo:1
 |   ^ expected positive decimal integer
